--- a/src/features/pictures/styles/SecondPictureFrame.module.css
+++ b/src/features/pictures/styles/SecondPictureFrame.module.css
@@ -8,11 +8,11 @@
   box-shadow:
     0 0 0 0 rgba(0, 0, 0, 0.25) inset,
     0 5px 5px 5px rgba(0, 0, 0, 0.25);
-  height: 12em;
+  height: 10.25em;
   position: absolute;
-  right: 0.75em;
-  top: 0em;
-  width: 14em;
+  left: 1.75em;
+  top: 1em;
+  width: 12em;
 }
 
 .frame:before {
