--- a/src/features/pictures/styles/FirstPictureFrame.module.css
+++ b/src/features/pictures/styles/FirstPictureFrame.module.css
@@ -46,3 +46,13 @@
   top: -1.5em;
   z-index: 1;
 }
+
+@media (max-width: 640px) {
+  .frame {
+    left: 50%;
+    top: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    transform: translateX(-50%);
+  }
+}
