--- a/src/features/pictures/styles/SecondPictureFrame.module.css
+++ b/src/features/pictures/styles/SecondPictureFrame.module.css
@@ -32,3 +32,13 @@
   top: -1em;
   z-index: 1;
 }
+
+@media (max-width: 640px) {
+  .frame {
+    left: 50%;
+    top: 1em;
+    margin-left: 0;
+    margin-right: 0;
+    transform: translateX(-50%);
+  }
+}
